@@ -1,3 +1,10 @@
+2015-02-05  Tassilo Horn  <tsdh@gnu.org>
+
+	* tex.el (TeX-pdf-tools-sync-view): New function to use PDF Tools
+	`pdf-view-mode' as a viewer.
+	(TeX-view-program-list-builtin): Add PDF Tools entry calling
+	`TeX-pdf-tools-sync-view'.
+
 2015-02-04  Tassilo Horn  <tsdh@gnu.org>
 
 	* Makefile.in (STYLESRC): Add new style.
